src/test/resources/purescript_examples/passing/Conditional.purs.psi
Purescript File
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(Qualified)
        PSASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Qualified)
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
          PSASTWrapperElement(ModuleName)
            PsiElement(proper name)('Console')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSASTWrapperElement(PositionedDeclarationRef)
          PSASTWrapperElement(ValueRef)
            PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('fns')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PsiElement(\)('\')
            PSASTWrapperElement(Abs)
              PsiElement(identifier)('f')
              PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PSASTWrapperElement(Value)
              PSASTWrapperElement(PrefixValue)
                PSASTWrapperElement(IfThenElse)
                  PsiElement(if)('if')
                  PsiElement(whitespace)(' ')
                  PSASTWrapperElement(Value)
                    PSASTWrapperElement(PrefixValue)
                      PSASTWrapperElement(Var)
                        PSASTWrapperElement(Qualified)
                          PsiElement(identifier)('f')
                          PsiElement(whitespace)(' ')
                      PSASTWrapperElement(BooleanLiteral)
                        PsiElement(true)('true')
                        PsiElement(whitespace)(' ')
                  PsiElement(then)('then')
                  PsiElement(whitespace)(' ')
                  PSASTWrapperElement(Value)
                    PSASTWrapperElement(PrefixValue)
                      PSASTWrapperElement(Var)
                        PSASTWrapperElement(Qualified)
                          PsiElement(identifier)('f')
                          PsiElement(whitespace)(' ')
                  PsiElement(else)('else')
                  PsiElement(whitespace)(' ')
                  PSASTWrapperElement(Value)
                    PSASTWrapperElement(PrefixValue)
                      PsiElement(\)('\')
                      PSASTWrapperElement(Abs)
                        PsiElement(identifier)('x')
                        PsiElement(whitespace)(' ')
                      PsiElement(->)('->')
                      PsiElement(whitespace)(' ')
                      PSASTWrapperElement(Value)
                        PSASTWrapperElement(PrefixValue)
                          PSASTWrapperElement(Var)
                            PSASTWrapperElement(Qualified)
                              PsiElement(identifier)('x')
                              PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('not')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PsiElement(\)('\')
            PSASTWrapperElement(Abs)
              PsiElement(identifier)('x')
              PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PSASTWrapperElement(Value)
              PSASTWrapperElement(PrefixValue)
                PSASTWrapperElement(IfThenElse)
                  PsiElement(if)('if')
                  PsiElement(whitespace)(' ')
                  PSASTWrapperElement(Value)
                    PSASTWrapperElement(PrefixValue)
                      PSASTWrapperElement(Var)
                        PSASTWrapperElement(Qualified)
                          PsiElement(identifier)('x')
                          PsiElement(whitespace)(' ')
                  PsiElement(then)('then')
                  PsiElement(whitespace)(' ')
                  PSASTWrapperElement(Value)
                    PSASTWrapperElement(PrefixValue)
                      PSASTWrapperElement(BooleanLiteral)
                        PsiElement(false)('false')
                        PsiElement(whitespace)(' ')
                  PsiElement(else)('else')
                  PsiElement(whitespace)(' ')
                  PSASTWrapperElement(Value)
                    PSASTWrapperElement(PrefixValue)
                      PSASTWrapperElement(BooleanLiteral)
                        PsiElement(true)('true')
                        PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PSASTWrapperElement(Var)
              PSASTWrapperElement(Qualified)
                PsiElement(identifier)('log')
                PsiElement(whitespace)(' ')
            PSASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
